tests/NormalTests/paczka1/small_fuzzy/50391420.err
Error in line 1: G8FE0LWEj S861 26,9
Error in line 14: 97TVS A196 212,62
Error in line 11: G8FE0LWEj A196 65,2
